--- a/index.html
+++ b/index.html
@@ -5,23 +5,23 @@
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Dropdown Menu</title>
 </head>
 <body>
     <div class="dropdown">
-        <button class="dropbtn">Меню</button>
+        <button class="dropbtn">Menu</button>
         <div class="dropdown-content">
-            <a href="#">Пункт 1</a>
-            <a href="#">Пункт 2</a>
-            <a href="#">Пункт 3</a>
+            <a href="#">Choice 1</a>
+            <a href="#">Choice 2</a>
+            <a href="#">Choice 3</a>
         </div>
     </div>
         <div class="dropdown">
-            <button class="dropbtn">Меню</button>
+            <button class="dropbtn">Menu</button>
             <div class="dropdown-content">
-                <a href="#">Пункт 1</a>
-                <a href="#">Пункт 2</a>
-                <a href="#">Пункт 3</a>
+                <a href="#">Choice 1</a>
+                <a href="#">Choice 2</a>
+                <a href="#">Choice 3</a>
             </div>
         </div>
 </body>
